Defect fixes. Hide header when not in config file. Jumps when click on filters group. Remove hide filters button.

--- a/less/components/consonant/filters/top/item.less
+++ b/less/components/consonant/filters/top/item.less
@@ -8,6 +8,7 @@
     margin-right: unit((@consonant-root-rem * 0.5), px);
     margin-bottom: 8/@consonant-root-rem;
     cursor: pointer;
+    user-select: none;
 
     .no-border-no-outline;
 
@@ -88,6 +89,7 @@
     }
 
     .consonant-top-filter--selcted-items-qty {
+        display: block;
         position: relative;
         margin: 0 0 0 unit((@consonant-root-rem * 0.5625), px);
         padding: 0 6/@consonant-root-rem;
@@ -421,6 +423,7 @@
             margin: 0;
             padding: 0;
             margin-right: unit((@consonant-root-rem * 0.5), px);
+            margin-bottom: 8/@consonant-root-rem;
             border-radius: unit((@consonant-root-rem * 0.25), px);
             z-index: 2;
 
